Revision history for Math::GrahamFunction

0.01001
    - Moved List::Util and Class::Accessor to "requires" instead of
    "build_requires" inside the Build.PL in accordance to the rule that
    modules that are required to run the module after building should be
    in "requires".

0.01       Tue Jan  9 14:55:14 IST 2007
    - First version, released on an unsuspecting world.
